--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:layout_gravity="center"
+    android:background="@drawable/wood"
     tools:context="com.example.salman.calculation.MainActivity">
 
     <LinearLayout
@@ -73,8 +74,9 @@
             android:id="@+id/textView4"
             android:textAlignment="textEnd"
             android:layout_gravity="end"
+            android:paddingTop="20dp"
             android:textSize="40dp"
-            android:textColor="#00ba96"
+            android:textColor="@color/colorPrimaryDark"
             android:layout_below="@+id/textView3"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -119,12 +121,13 @@
                     app:srcCompat="@drawable/power"
                     android:scaleType="fitCenter"
                     android:id="@+id/btnClr"
-                    android:backgroundTint="#ffa159"
+                    android:backgroundTint="@color/colorPrimaryDark"
                     android:layout_above="@+id/btn1"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
 
-                    android:padding="20dp" />
+
+                    android:padding="16dp" />
 
                 <ImageButton
                     android:layout_width="90dp"
@@ -132,12 +135,12 @@
                     app:srcCompat="@drawable/minus"
                     android:id="@+id/btnMin"
                     android:scaleType="fitCenter"
-                    android:backgroundTint="#00ba96"
+                    android:backgroundTint="@color/colorPrimaryDark"
 
 
                     android:layout_toRightOf="@+id/btn1"
 
-                    android:padding="15dp"
+                    android:padding="12dp"
                     android:layout_weight="0.31" />
 
                 <ImageButton
@@ -146,7 +149,7 @@
                     app:srcCompat="@drawable/bck"
                     android:id="@+id/btnBack"
                     android:scaleType="fitCenter"
-                    android:backgroundTint="#00ba96"
+                    android:backgroundTint="@color/colorPrimaryDark"
                     android:padding="15dp" />
 
             </LinearLayout>
@@ -166,7 +169,8 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignRight="@+id/textView"
-                    android:layout_alignEnd="@+id/textView" />
+                    android:layout_alignEnd="@+id/textView"
+                    android:backgroundTint="#fff"/>
 
                 <Button
                     android:text="2"
@@ -176,17 +180,20 @@
                     android:layout_alignParentBottom="true"
                     android:layout_toRightOf="@+id/btn1"
                     android:layout_toLeftOf="@+id/btn6"
-                    android:layout_toStartOf="@+id/btn6" />
+                    android:layout_toStartOf="@+id/btn6"
+                    android:backgroundTint="#fff"/>
 
                 <Button
                     android:text="3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/btn3"
+                    android:backgroundTint="#fff"
                     android:layout_alignBaseline="@+id/btn2"
                     android:layout_alignBottom="@+id/btn2"
                     android:layout_toRightOf="@+id/btn2"
-                    android:layout_toEndOf="@+id/btn2" />
+                    android:layout_toEndOf="@+id/btn2"
+                    />
 
 
             </LinearLayout>
@@ -202,7 +209,8 @@
                     android:id="@+id/btn4"
                     android:layout_below="@+id/btn1"
                     android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />
+                    android:layout_alignParentStart="true"
+                    android:backgroundTint="#fff"/>
 
                 <Button
                     android:text="5"
@@ -211,7 +219,8 @@
                     android:layout_alignBottom="@+id/btn4"
                     android:layout_toRightOf="@+id/btn1"
                     android:layout_toEndOf="@+id/btn1"
-                    android:id="@+id/btn5" />
+                    android:id="@+id/btn5"
+                    android:backgroundTint="#fff"/>
 
                 <Button
                     android:text="6"
@@ -220,7 +229,8 @@
                     android:layout_below="@+id/btn3"
                     android:layout_toRightOf="@+id/btn5"
                     android:layout_toEndOf="@+id/btn5"
-                    android:id="@+id/btn6" />
+                    android:id="@+id/btn6"
+                    android:backgroundTint="#fff"/>
 
 
 
@@ -241,7 +251,8 @@
                     android:layout_below="@+id/btn4"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:id="@+id/btn7" />
+                    android:id="@+id/btn7"
+                    android:backgroundTint="#fff"/>
 
                 <Button
                     android:text="8"
@@ -250,7 +261,8 @@
                     android:layout_below="@+id/btn4"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:id="@+id/btn8" />
+                    android:id="@+id/btn8"
+                    android:backgroundTint="#fff"/>
                 <Button
                     android:text="9"
                     android:layout_width="wrap_content"
@@ -258,7 +270,8 @@
                     android:layout_below="@+id/btn4"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:id="@+id/btn9" />
+                    android:id="@+id/btn9"
+                    android:backgroundTint="#fff"/>
 
 
 
@@ -275,20 +288,23 @@
                     android:text="."
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/btnPoint" />
+                    android:id="@+id/btnPoint"
+                    android:backgroundTint="#fff"/>
                 <Button
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/btn0" />
+                    android:id="@+id/btn0"
+                    android:backgroundTint="#fff"/>
 
                 <Button
-                    android:textColor="@android:color/white"
+                    android:textColor="#000"
                     android:text="="
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/btnEql"
-                    android:backgroundTint="#00ba96"
+                    android:backgroundTint="#fff"
+
                     />
 
 
@@ -312,8 +328,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:srcCompat="@drawable/sqrt"
+
                     android:id="@+id/btnSqrt"
-                    android:backgroundTint="#00ba96"
+                    android:backgroundTint="@color/colorPrimaryDark"
                     android:scaleType="fitCenter" />
             </LinearLayout>
 
@@ -326,7 +343,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/btnPlus"
                     style="@style/Widget.AppCompat.Button"
-                    android:backgroundTint="#00ba96"
+                    android:backgroundTint="@color/colorPrimaryDark"
                     android:textColor="@android:color/white"
                     android:textSize="20dp"
                      />
@@ -342,7 +359,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/btnMinus"
-                    android:backgroundTint="#00ba96"
+                    android:backgroundTint="@color/colorPrimaryDark"
                     android:textColor="@android:color/white"
 
                     />
@@ -357,7 +374,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/btnMult"
-                    android:backgroundTint="#00ba96"
+                    android:backgroundTint="@color/colorPrimaryDark"
                     android:textSize="20dp"
                     android:textColor="@android:color/white"
 
@@ -373,7 +390,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/btnDivide"
-                    android:backgroundTint="#00ba96"
+                    android:backgroundTint="@color/colorPrimaryDark"
                     android:textSize="20dp"
                     android:textColor="@android:color/white"
 
