--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:layout_gravity="center"
     android:background="@drawable/wood"
-    tools:context="com.example.salman.calculation.MainActivity">
+    tools:context="com.example.salman.abacus.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -113,15 +113,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal"
-                android:weightSum="1">
+                android:weightSum="1"
+                >
 
                 <ImageButton
-                    android:layout_width="86dp"
+                    android:layout_width="88dp"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/power"
                     android:scaleType="fitCenter"
                     android:id="@+id/btnClr"
-                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:background="@drawable/btnshape"
+                    android:scaleX=".85"
+                    android:scaleY=".85"
+
                     android:layout_above="@+id/btn1"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
@@ -130,12 +134,14 @@
                     android:padding="16dp" />
 
                 <ImageButton
-                    android:layout_width="90dp"
+                    android:layout_width="88dp"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/minus"
                     android:id="@+id/btnMin"
                     android:scaleType="fitCenter"
-                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:background="@drawable/btnshape"
+                    android:scaleX=".85"
+                    android:scaleY=".85"
 
 
                     android:layout_toRightOf="@+id/btn1"
@@ -144,12 +150,14 @@
                     android:layout_weight="0.31" />
 
                 <ImageButton
-                    android:layout_width="86dp"
+                    android:layout_width="84dp"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/bck"
                     android:id="@+id/btnBack"
                     android:scaleType="fitCenter"
-                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:background="@drawable/btnshape"
+                    android:scaleX=".85"
+                    android:scaleY=".85"
                     android:padding="15dp" />
 
             </LinearLayout>
@@ -170,7 +178,10 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignRight="@+id/textView"
                     android:layout_alignEnd="@+id/textView"
-                    android:backgroundTint="#fff"/>
+
+                    android:background="@drawable/numshape"
+                    android:scaleX="0.85"
+                    android:scaleY="0.85"/>
 
                 <Button
                     android:text="2"
@@ -181,14 +192,21 @@
                     android:layout_toRightOf="@+id/btn1"
                     android:layout_toLeftOf="@+id/btn6"
                     android:layout_toStartOf="@+id/btn6"
-                    android:backgroundTint="#fff"/>
+
+                    android:background="@drawable/numshape"
+                    android:scaleX="0.85"
+                    android:scaleY="0.85"/>
 
                 <Button
                     android:text="3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/btn3"
-                    android:backgroundTint="#fff"
+
+                    android:background="@drawable/numshape"
+                    android:scaleX="0.85"
+                    android:scaleY="0.85"
+
                     android:layout_alignBaseline="@+id/btn2"
                     android:layout_alignBottom="@+id/btn2"
                     android:layout_toRightOf="@+id/btn2"
@@ -210,7 +228,9 @@
                     android:layout_below="@+id/btn1"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:backgroundTint="#fff"/>
+                    android:background="@drawable/numshape"
+                    android:scaleX="0.85"
+                    android:scaleY="0.85"/>
 
                 <Button
                     android:text="5"
@@ -220,7 +240,10 @@
                     android:layout_toRightOf="@+id/btn1"
                     android:layout_toEndOf="@+id/btn1"
                     android:id="@+id/btn5"
-                    android:backgroundTint="#fff"/>
+
+                    android:background="@drawable/numshape"
+                    android:scaleX="0.85"
+                    android:scaleY="0.85"/>
 
                 <Button
                     android:text="6"
@@ -230,7 +253,10 @@
                     android:layout_toRightOf="@+id/btn5"
                     android:layout_toEndOf="@+id/btn5"
                     android:id="@+id/btn6"
-                    android:backgroundTint="#fff"/>
+
+                    android:background="@drawable/numshape"
+                    android:scaleX="0.85"
+                    android:scaleY="0.85"/>
 
 
 
@@ -252,7 +278,10 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:id="@+id/btn7"
-                    android:backgroundTint="#fff"/>
+
+                    android:background="@drawable/numshape"
+                    android:scaleX="0.85"
+                    android:scaleY="0.85"/>
 
                 <Button
                     android:text="8"
@@ -262,7 +291,10 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:id="@+id/btn8"
-                    android:backgroundTint="#fff"/>
+
+                    android:background="@drawable/numshape"
+                    android:scaleX="0.85"
+                    android:scaleY="0.85"/>
                 <Button
                     android:text="9"
                     android:layout_width="wrap_content"
@@ -271,7 +303,10 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:id="@+id/btn9"
-                    android:backgroundTint="#fff"/>
+
+                    android:background="@drawable/numshape"
+                    android:scaleX="0.85"
+                    android:scaleY="0.85"/>
 
 
 
@@ -289,13 +324,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/btnPoint"
-                    android:backgroundTint="#fff"/>
+
+                    android:background="@drawable/numshape"
+                    android:scaleX="0.85"
+                    android:scaleY="0.85"/>
                 <Button
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/btn0"
-                    android:backgroundTint="#fff"/>
+
+                    android:background="@drawable/numshape"
+                    android:scaleX="0.85"
+                    android:scaleY="0.85"/>
 
                 <Button
                     android:textColor="#000"
@@ -303,7 +344,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/btnEql"
-                    android:backgroundTint="#fff"
+                    android:background="@drawable/numshape"
+                    android:scaleX="0.85"
+                    android:scaleY="0.85"
 
                     />
 
@@ -330,7 +373,9 @@
                     app:srcCompat="@drawable/sqrt"
 
                     android:id="@+id/btnSqrt"
-                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:background="@drawable/btnshape"
+                    android:scaleX=".85"
+                    android:scaleY=".85"
                     android:scaleType="fitCenter" />
             </LinearLayout>
 
@@ -343,7 +388,9 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/btnPlus"
                     style="@style/Widget.AppCompat.Button"
-                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:background="@drawable/btnshape"
+                    android:scaleX=".85"
+                    android:scaleY=".85"
                     android:textColor="@android:color/white"
                     android:textSize="20dp"
                      />
@@ -359,7 +406,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/btnMinus"
-                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:background="@drawable/btnshape"
+                    android:scaleX=".85"
+                    android:scaleY=".85"
                     android:textColor="@android:color/white"
 
                     />
@@ -374,7 +423,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/btnMult"
-                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:background="@drawable/btnshape"
+                    android:scaleX=".85"
+                    android:scaleY=".85"
                     android:textSize="20dp"
                     android:textColor="@android:color/white"
 
@@ -390,7 +441,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/btnDivide"
-                    android:backgroundTint="@color/colorPrimaryDark"
+
+                    android:background="@drawable/btnshape"
+                    android:scaleX=".85"
+                    android:scaleY=".85"
+
                     android:textSize="20dp"
                     android:textColor="@android:color/white"
 
