--- a/app/src/main/res/drawable/numbtn.xml
+++ b/app/src/main/res/drawable/numbtn.xml
@@ -4,16 +4,28 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <solid
-        android:color="@color/colorPrimaryDark"/>
 
-    <corners
-        android:radius="10dp" />
+    <gradient
+        android:startColor="#0Affffff"
+        android:angle="180"
+        android:endColor="#00ffffff"
+        android:type="linear"
+
+        />
+
+
+
+
+
+
+
     <padding
         android:bottom="7dp"
         android:left="7dp"
         android:right="7dp"
         android:top="7dp" />
+
+
 
 
 </shape>
