--- a/app/src/main/res/drawable/selected.xml
+++ b/app/src/main/res/drawable/selected.xml
@@ -4,16 +4,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <gradient
-        android:startColor="#fff"
-        android:angle="45"
-        android:endColor="#fff"
-        android:type="linear"
+    <solid
+        android:color="@color/colorPrimaryDark"/>
 
-        />
 
-    <corners
-        android:radius="10dp" />
     <padding
         android:bottom="7dp"
         android:left="7dp"
