--- a/app/src/main/res/drawable/numdefault.xml
+++ b/app/src/main/res/drawable/numdefault.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
-
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid
-        android:color="@color/colorPrimaryDark"/>
-
+    <gradient
+        android:startColor="#0Affffff"
+        android:angle="180"
+        android:endColor="#00ffffff"
+        android:type="linear"
+        />
     <padding
         android:bottom="7dp"
         android:left="7dp"
         android:right="7dp"
         android:top="7dp" />
-
 </shape>
